Bug 1850811 - Clean-up high-contrast declarations. r=dao
No behavior change (though I'd note some of the colors don't really
make sense to me).

You can get those declarations to take effect on other platforms by
tweaking the color settings (always / never override colors, etc),
it's just the default setting which is different on Windows and
elsewhere.

Though you could argue we might not want to force colors in chrome
ever? We could do that with `forced-color-adjust: none` as needed.

Depends on D187193

Differential Revision: https://phabricator.services.mozilla.com/D187194

UltraBlame original commit: 00ad595422a0320a19d4304330790c92308204af

--- a/toolkit/themes/shared/design-tokens-shared.css
+++ b/toolkit/themes/shared/design-tokens-shared.css
@@ -1193,6 +1193,52 @@ text
 color
 )
 ;
+-
+-
+border
+-
+interactive
+-
+color
+:
+AccentColor
+;
+-
+-
+border
+-
+interactive
+-
+color
+-
+hover
+:
+ButtonText
+;
+-
+-
+border
+-
+interactive
+-
+color
+-
+active
+:
+AccentColor
+;
+-
+-
+border
+-
+interactive
+-
+color
+-
+disabled
+:
+GrayText
+;
 /
 *
 Button
@@ -1377,6 +1423,53 @@ color
 canvas
 )
 ;
+-
+-
+color
+-
+accent
+-
+primary
+:
+AccentColor
+;
+/
+*
+FIXME
+(
+emilio
+)
+:
+These
+seem
+rather
+sketchy
+*
+/
+-
+-
+color
+-
+accent
+-
+primary
+-
+hover
+:
+ButtonText
+;
+-
+-
+color
+-
+accent
+-
+primary
+-
+active
+:
+ButtonText
+;
 /
 *
 *
@@ -1491,7 +1584,6 @@ deemphasized
 inherit
 ;
 }
-}
 media
 (
 forced
@@ -1506,6 +1598,18 @@ to
 Windows
 HCM
 only
+by
+default
+.
+TODO
+(
+emilio
+)
+:
+These
+seem
+rather
+sketchy
 *
 /
 :
@@ -1604,128 +1708,5 @@ active
 SelectedItem
 ;
 }
-}
-media
-(
-forced
--
-colors
-:
-none
-)
-and
-(
-prefers
--
-contrast
-)
-{
-/
-*
-Applies
-to
-macOS
-"
-increase
-contrast
-"
-only
-*
-/
-:
-root
-:
-host
-{
-/
-*
-Border
-*
-/
--
--
-border
--
-interactive
--
-color
-:
-AccentColor
-;
--
--
-border
--
-interactive
--
-color
--
-hover
-:
-ButtonText
-;
--
--
-border
--
-interactive
--
-color
--
-active
-:
-AccentColor
-;
--
--
-border
--
-interactive
--
-color
--
-disabled
-:
-GrayText
-;
-/
-*
-Color
-*
-/
--
--
-color
--
-accent
--
-primary
-:
-AccentColor
-;
--
--
-color
--
-accent
--
-primary
--
-hover
-:
-ButtonText
-;
--
--
-color
--
-accent
--
-primary
--
-active
-:
-ButtonText
-;
 }
 }
